kubernetes/apps/default/mealie/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
spec:
  hostnames:
    - recipes.janpuc.com
    - mealie.janpuc.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: observability
          port: 8080
